<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/property_main_photo"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:contentDescription="@string/content_description"
        android:padding="20dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/property_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/property_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/no_property_type_found"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/property_main_photo"
            app:layout_constraintTop_toTopOf="@+id/property_main_photo" />

        <TextView
            android:id="@+id/property_address_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/no_address_found"
            android:gravity="center_vertical"
            android:lines="2"
            android:textColor="?attr/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="@+id/property_type"
            app:layout_constraintStart_toStartOf="@+id/property_type"
            app:layout_constraintTop_toBottomOf="@+id/property_type" />

        <TextView
            android:id="@+id/property_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto_slab_bold"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/property_address_street"
            app:layout_constraintStart_toStartOf="@+id/property_address_street"
            app:layout_constraintTop_toBottomOf="@+id/property_address_street" />
    </LinearLayout>
</LinearLayout>